# mutate-repo-policy

./: Cargo.toml  Makefile  README.md  artifacthub-pkg.yml  artifacthub-repo.yml  e2e.bats  metadata.yml
.github/workflows/: release.yml
src/: image.rs  lib.rs  settings.rs
test_data/: pod_creation.json
