[package]
name = "mutate-repos-policy"
version = "0.1.0"
authors = ["fengxsong <fengxsong@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
k8s-openapi = { version = "0.16.0", features = ["v1_24"] }
kubewarden-policy-sdk = "0.8.0"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slog = "2.7"